# WizardGame

./: .gitignore  CMakeLists.txt  Makefile  installserver.sh
game_client/: CMakeLists.txt
game_client/assets/: WizardSheet.xcf
game_client/assets/maps/: MageCity.tsx  Terrain.tsx  mapcleaner.py
game_client/assets/maps/1/: 0.csv  1.csv  1.tmx  2.csv  Collision.csv
game_client/assets/maps/2/: 0.csv  1.csv  2.csv  2.tmx  Collision.csv
game_client/src/: AssetManager.cpp  AssetManager.h  Battle.cpp  Battle.h  Collision.cpp  Collision.h  Game.cpp  Game.h  Map.cpp  Map.h  Menu.h  Network.cpp  Network.h  Spells.h  Textbox.cpp  Textbox.h  TextureManager.cpp  main.cpp
game_client/src/ECS/: Animation.h  BattleComponent.h  ColliderComponent.h  ECS.cpp  ECS.h  EventComponent.h  KeyboardController.h  NPCComponent.h  NetworkComponent.h  ProjectileComponent.h  SpriteComponent.h  TileComponent.h  TransformComponent.h  UILabel.h
game_client/src/login_client/: Login.cpp  Login.h  LoginNetwork.cpp  LoginNetwork.h  login_struct.h
login_server/: CMakeLists.txt
login_server/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.cpp  npc.cpp  npc.h
shared/: NetworkHelper.h  Vector2D.cpp  Vector2D.h  data_struct.h  string_helper.h
sql/: create.sql
tests/: test.cpp
